Changes -> commands und gmute are now under -> /proxy commands/chat & smale other changes