@@ -2,88 +2,45 @@ package de.einfachesache.proxymanager.velocity.command;
 
 import com.velocitypowered.api.command.CommandSource;
 import com.velocitypowered.api.command.SimpleCommand;
-import com.velocitypowered.api.proxy.Player;
-import com.velocitypowered.api.proxy.server.RegisteredServer;
-import com.velocitypowered.api.proxy.server.ServerInfo;
 import de.einfachesache.proxymanager.core.Config;
 import de.einfachesache.proxymanager.core.Core;
 import de.einfachesache.proxymanager.core.RedisConnector;
-import de.einfachesache.proxymanager.velocity.VProxyManager;
-import dev.simplix.protocolize.api.Protocolize;
-import dev.simplix.protocolize.api.chat.ChatElement;
-import dev.simplix.protocolize.api.inventory.Inventory;
-import dev.simplix.protocolize.api.item.ItemStack;
-import dev.simplix.protocolize.data.ItemType;
-import dev.simplix.protocolize.data.inventory.InventoryType;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
 
-import java.util.*;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.Locale;
 import java.util.stream.Collectors;
 
 public class ProxyCMD implements SimpleCommand {
 
-    private final List<String> SUB_COMMANDS = Arrays.asList("reload", "send");
-    private static final List<String> RELOAD_SUBS = List.of("config", "discord");
-
-    private final VProxyManager instance;
-
-    public ProxyCMD(VProxyManager instance) {
-        this.instance = instance;
-    }
+    private final List<String> subCommands = Arrays.asList("reload", "commands", "chat");
+    private final List<String> reloadSubs = List.of("config", "discord");
+    private final List<String> enableAndDisableSubs = List.of("enable", "disable");
 
     @Override
     public void execute(Invocation invocation) {
         CommandSource source = invocation.source();
         String[] args = invocation.arguments();
 
-
-        if (invocation.alias().equalsIgnoreCase("proxygui")) {
-            openAdminGUI(source);
-            return;
-        }
-
         if (args.length >= 1) {
 
-            if (args[0].equalsIgnoreCase("reload") || args[0].equalsIgnoreCase("rl")) {
-
-                if (args.length == 1) {
-                    source.sendMessage(Component.text("Reload: Config + Discord …").color(NamedTextColor.GRAY));
-                    Config.reloadFilesAsync().thenAccept(ok -> {
-                        if (ok) source.sendMessage(Component.text("§aConfigs neu geladen."));
-                        else source.sendMessage(Component.text("§cConfig Reload fehlgeschlagen. Details im Log."));
-                    });
-                    Core.getDiscordAPI().reloadGuildsAsync().thenAccept(ok -> {
-                        if (ok) source.sendMessage(Component.text("§aDiscord-Commands neu geladen."));
-                        else source.sendMessage(Component.text("§cDiscord Reload fehlgeschlagen. Details im Log."));
-                    });
+            switch (args[0]) {
+                case "reload", "rl" :{
+                    reloadCMD(source, args);
                     return;
                 }
 
-                String sub = args[1].toLowerCase(Locale.ROOT);
-                switch (sub) {
-                    case "config" -> {
-                        source.sendMessage(Component.text("Reload: Config …").color(NamedTextColor.GRAY));
-                        Config.reloadFilesAsync().thenAccept(ok -> {
-                            if (ok) source.sendMessage(Component.text("§aConfigs neu geladen."));
-                            else source.sendMessage(Component.text("§cConfig Reload fehlgeschlagen. Details im Log."));
-                        });
-                        source.sendMessage(Component.text("Config neu geladen.").color(NamedTextColor.GREEN));
-                        return;
-                    }
-                    case "discord", "jda" -> {
-                        source.sendMessage(Component.text("Reload: Discord …").color(NamedTextColor.GRAY));
-                        Core.getDiscordAPI().reloadGuildsAsync().thenAccept(ok -> {
-                            if (ok) source.sendMessage(Component.text("§aDiscord-Commands neu geladen."));
-                            else source.sendMessage(Component.text("§cDiscord Reload fehlgeschlagen. Details im Log."));
-                        });
-                        return;
-                    }
-                    default -> {
-                        source.sendMessage(Component.text("Unbekanntes Argument: " + sub).color(NamedTextColor.RED));
-                        source.sendMessage(Component.text("Nutzung: /proxy reload [config|discord]").color(NamedTextColor.RED));
-                        return;
-                    }
+                case "commands" :{
+                    commandsCMD(source, args);
+                    return;
+                }
+
+                case "chat" :{
+                    chatCMD(source, args);
+                    return;
                 }
             }
         }
@@ -91,71 +48,108 @@ public class ProxyCMD implements SimpleCommand {
         source.sendMessage(Component.text("§cInvalid arguments -> /proxy [args]"));
     }
 
-    private void openAdminGUI(CommandSource source) {
+    private void reloadCMD(CommandSource source, String[] args) {
 
-        if (!(source instanceof Player player)) {
-            source.sendMessage(Component.text("§cThis command can only be executed as a Player"));
+        if (args.length == 1) {
+            source.sendMessage(Component.text("Reload: Config + Discord …").color(NamedTextColor.GRAY));
+            Config.reloadFilesAsync().thenAccept(ok -> {
+                if (ok) source.sendMessage(Component.text("§aConfigs neu geladen."));
+                else source.sendMessage(Component.text("§cConfig Reload fehlgeschlagen. Details im Log."));
+            });
+            Core.getDiscordAPI().reloadGuildsAsync().thenAccept(ok -> {
+                if (ok) source.sendMessage(Component.text("§aDiscord-Commands neu geladen."));
+                else source.sendMessage(Component.text("§cDiscord Reload fehlgeschlagen. Details im Log."));
+            });
             return;
         }
 
-        if (!instance.getProxy().getPluginManager().isLoaded("protocolize")) {
-            source.sendMessage(Component.text("§cProtocolize need to be installed to run this command"));
-            return;
-        }
+        switch (args[1].toLowerCase(Locale.ROOT)) {
 
-        RedisConnector jedis = Core.getRedisConnector();
-        UUID uuid = player.getUniqueId();
-
-        Inventory inventory = new Inventory(InventoryType.GENERIC_9X3)
-                .title(ChatElement.ofLegacyText("§c§lAdmin Settings"));
-
-        // Items erstellen
-        ItemStack disableChatButton = new ItemStack(ItemType.COMMAND_BLOCK);
-        disableChatButton.displayName(ChatElement.ofLegacyText("§4Chat Status"));
-        disableChatButton.addToLore(ChatElement.ofLegacyText("§7The Chat is currently " +
-                (Boolean.parseBoolean(jedis.get("Chat-Disabled")) ? "§cinaktive" : "§aactive")));
-
-        ItemStack disableCommandsButton = new ItemStack(ItemType.COMMAND_BLOCK);
-        disableCommandsButton.displayName(ChatElement.ofLegacyText("§4Commands Status"));
-        disableCommandsButton.addToLore(ChatElement.ofLegacyText("§7Commands are currently " +
-                (Boolean.parseBoolean(jedis.get("Commands-Disabled")) ? "§cinaktive" : "§aactive")));
-
-        inventory.item(12, disableChatButton);
-        inventory.item(14, disableCommandsButton);
-
-        inventory.onClick(event -> {
-            if (event.slot() == 12) {
-                itemUpdateButton(disableChatButton, "Chat-Disabled", player);
-            } else if (event.slot() == 14) {
-                itemUpdateButton(disableCommandsButton, "Commands-Disabled", player);
+            case "config" -> {
+                source.sendMessage(Component.text("Reload: Config …").color(NamedTextColor.GRAY));
+                Config.reloadFilesAsync().thenAccept(ok -> {
+                    if (ok) source.sendMessage(Component.text("§aConfigs neu geladen."));
+                    else source.sendMessage(Component.text("§cConfig Reload fehlgeschlagen. Details im Log."));
+                });
+                source.sendMessage(Component.text("Config neu geladen.").color(NamedTextColor.GREEN));
             }
-        });
 
-        Protocolize.playerProvider().player(uuid).openInventory(inventory);
-        player.sendMessage(Component.text("§aOpening admin settings..."));
+            case "discord" -> {
+                source.sendMessage(Component.text("Reload: Discord …").color(NamedTextColor.GRAY));
+                Core.getDiscordAPI().reloadGuildsAsync().thenAccept(ok -> {
+                    if (ok) source.sendMessage(Component.text("§aDiscord-Commands neu geladen."));
+                    else source.sendMessage(Component.text("§cDiscord Reload fehlgeschlagen. Details im Log."));
+                });
+            }
+
+            default -> {
+                source.sendMessage(Component.text("Unbekanntes Argument: " + args[1].toLowerCase(Locale.ROOT)).color(NamedTextColor.RED));
+                source.sendMessage(Component.text("Nutzung: /proxy reload [config|discord]").color(NamedTextColor.RED));
+            }
+        }
     }
 
-    private void itemUpdateButton(ItemStack item, String type, Player player) {
+    private void commandsCMD(CommandSource source, String[] args) {
         RedisConnector jedis = Core.getRedisConnector();
-        boolean newState = !Boolean.parseBoolean(jedis.get(type));
-        jedis.set(type, String.valueOf(newState));
 
-        item.lore(0, ChatElement.ofLegacyText((type.contains("Chat") ? "§7The Chat is" : "§7Commands are") + " currently " + (newState ? "§cinaktive" : "§aactive")));
-        player.sendMessage(Component.text((type.contains("Chat") ? "§7The Chat is" : "§7Commands are") + " now " + (newState ? "§cinaktive" : "§aactive")));
+        if (args.length == 1) {
+            boolean disabled = Boolean.parseBoolean(jedis.get("Commands-Disabled"));
+            if (disabled) {
+                source.sendMessage(Component.text("§aDu hast alle Commands aktiviert"));
+                jedis.set("Commands-Disabled", "false");
+            } else {
+                source.sendMessage(Component.text("§4Du hast alle Commands deaktiviert"));
+                jedis.set("Commands-Disabled", "true");
+            }
+            return;
+        }
+
+
+        if (args.length == 2) {
+            if (args[1].equalsIgnoreCase("enable")) {
+                source.sendMessage(Component.text("§aDu hast alle Commands aktiviert"));
+                jedis.set("Commands-Disabled", "false");
+            } else if (args[1].equalsIgnoreCase("disable")) {
+                source.sendMessage(Component.text("§4Du hast alle Commands deaktiviert"));
+                jedis.set("Commands-Disabled", "true");
+            }
+        }
     }
 
+    private void chatCMD(CommandSource source, String[] args) {
+        RedisConnector jedis = Core.getRedisConnector();
+
+        if (args.length == 1) {
+            boolean chatDisabled = Boolean.parseBoolean(jedis.get("Chat-Disabled"));
+            if (chatDisabled) {
+                source.sendMessage(Component.text("§aDu hast den Chat aktiviert"));
+                jedis.set("Chat-Disabled", "false");
+            } else {
+                source.sendMessage(Component.text("§4Du hast den Chat deaktiviert"));
+                jedis.set("Chat-Disabled", "true");
+            }
+        } else if (args.length == 2) {
+            if (args[1].equalsIgnoreCase("enable")) {
+                source.sendMessage(Component.text("§aDu hast den Chat aktiviert"));
+                jedis.set("Chat-Disabled", "false");
+            } else if (args[1].equalsIgnoreCase("disable")) {
+                source.sendMessage(Component.text("§4Du hast den Chat deaktiviert"));
+                jedis.set("Chat-Disabled", "true");
+            }
+        }
+    }
 
     @Override
     public List<String> suggest(final Invocation invocation) {
         String[] args = invocation.arguments();
 
         if (args.length == 0) {
-            return SUB_COMMANDS;
+            return subCommands;
         }
 
         if (args.length == 1) {
             String prefix = args[0].toLowerCase(Locale.ROOT);
-            return SUB_COMMANDS.stream()
+            return subCommands.stream()
                     .filter(sub -> sub.startsWith(prefix))
                     .collect(Collectors.toList());
         }
@@ -165,32 +159,17 @@ public class ProxyCMD implements SimpleCommand {
         if (args.length == 2) {
             String prefix = args[1].toLowerCase(Locale.ROOT);
 
-            if (first.equals("send")) {
-                return instance.getProxy().getAllPlayers().stream()
-                        .map(Player::getUsername)
-                        .filter(name -> name.toLowerCase(Locale.ROOT).startsWith(prefix))
-                        .collect(Collectors.toList());
-            }
-
             if (first.equals("reload") || first.equals("rl")) {
-                return RELOAD_SUBS.stream()
+                return reloadSubs.stream()
                         .filter(sub -> sub.startsWith(prefix))
                         .collect(Collectors.toList());
             }
 
-            return Collections.emptyList();
-        }
-
-        if (args.length == 3) {
-            if (first.equals("send")) {
-                String prefix = args[2].toLowerCase(Locale.ROOT);
-                return instance.getProxy().getAllServers().stream()
-                        .map(RegisteredServer::getServerInfo)
-                        .map(ServerInfo::getName)
-                        .filter(name -> name.toLowerCase(Locale.ROOT).startsWith(prefix))
+            if (first.equals("commands") || first.equals("chat")) {
+                return enableAndDisableSubs.stream()
+                        .filter(sub -> sub.startsWith(prefix))
                         .collect(Collectors.toList());
             }
-            return Collections.emptyList();
         }
 
         return Collections.emptyList();
